--- a/mobile.css
+++ b/mobile.css
@@ -47,9 +47,13 @@ section .section-subheading {
 
 /* Style the header and header navigation */
 .header {
+  padding: 1rem;
   height: 50px;
   background-color: #f5f5f5;
   position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .logo a {
@@ -60,7 +64,64 @@ section .section-subheading {
 
 #header-nav {
   display: none;
+  margin: 0;
 }
+
+.nav-item:not(:first-child) {
+  margin-top: 1rem;
+}
+
+.nav-item a:hover {
+  color: var(--pink);
+}
+
+.nav-item a {
+  color: var(--white);
+}
+
+.ham-icon-wrapper {
+  display: block;
+}
+
+/* The Overlay (background) */
+.overlay { 
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  height: 100%;
+  width: 0;
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0, 0.9); 
+  overflow-x: hidden;
+  transition: 0.5s;
+}
+
+.overlay-content {
+  padding: 1rem;
+  position: relative;
+  top: 0;
+  width: 100%;
+  margin-top: 1rem;
+  font-size: 1.5rem;
+}
+
+
+
+.overlay .closebtn {
+  position: relative;
+  top: 0;
+  font-size: 2.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-bottom: 1rem;
+  color: var(--white);
+}
+
+
 
 /* Style the hero section */
 #hero {
